--- a/index.html
+++ b/index.html
@@ -231,9 +231,13 @@
 			<h2>Managing Partner's Words</h2>
 			<div class="border"> </div>
 			<div class="col-md-6 wthree-welcome-center">
-				<img style="display: block;border: 1px solid black;margin-left: auto;margin-right: auto; max-width: 100%;" height="350px" src="images/card.jpg" alt=" ">
+				<img style="display: block;margin-top: 65px; border: 1px solid black;margin-left: auto;margin-right: auto; max-width: 100%;" height="350px" src="images/card.jpg" alt=" ">
 			</div>
 			<div class="col-md-6 wthree-welcome-right">
+				<p style="text-align: left; font-weight: bold;">
+					GENTLEMEN <br>
+					ASSALAMU ALAIKUM
+				</p>
 				<p style="text-align: justify;">
 					It gives us immense pleasure of availing this Opportunity to introduce ourselves to our friends and 
 					valued clients from kingdom of Saudi Arabia BANGLADESHI LABOUR still continues to be cheap and specialized in Maintenance and cleaning.
